<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_popup"
    android:fadingEdge="horizontal|vertical"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="80dp">

    <TextView
        android:id="@+id/client_name_text_input_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/block_user"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        tools:targetApi="o" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sender_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sender_label" />

        <TextView
            android:id="@+id/sender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sender" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ip_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip_label" />

        <TextView
            android:id="@+id/ip_sender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mac_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mac_label" />

        <TextView
            android:id="@+id/mac_sender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mac" />
    </LinearLayout>

    <Button
        android:id="@+id/block_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/rounded_button"
        android:padding="16dp"
        android:text="@string/block" />
</LinearLayout>