<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:contentDescription="@string/music_icon_description"
        app:srcCompat="@drawable/music_icon" />

    <TextView
        android:id="@+id/list_track_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/local_track_id"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/list_track_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:text="@string/local_track_name"
        android:textSize="@dimen/row_text_size" />

</LinearLayout>