<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_popup"
    android:fadingEdge="horizontal|vertical"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="80dp">

    <EditText
        android:id="@+id/old_password_text_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/old_password_change_hint"
        android:inputType="textPassword"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/new_password_text_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/new_password_change_hint"
        android:inputType="textPassword"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/new_password_confirm_text_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/confirm_new_password_change_hint"
        android:inputType="textPassword"
        tools:targetApi="o" />

    <Button
        android:id="@+id/changement_mdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/rounded_button"
        android:padding="16dp"
        android:text="@string/change_password" />
</LinearLayout>