<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_popup"
    android:fadingEdge="horizontal|vertical"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="80dp">

    <ImageView
        android:layout_width="130dp"
        android:layout_height="110dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/help_icone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:text="@string/supervisor_drag_help"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:text="@string/supervisor_double_click_help"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:text="@string/supervisor_swipe_help"
        android:textSize="18sp" />

</LinearLayout>