<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/row_height"
    android:orientation="vertical"
    android:paddingLeft="@dimen/row_padding_vertical"
    android:paddingTop="5dp"
    android:paddingRight="@dimen/row_padding_vertical"
    android:paddingBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sender_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sender_label"
            android:textSize="@dimen/row_text_size" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/row_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ip_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip_label"
            android:textSize="@dimen/row_text_size" />

        <TextView
            android:id="@+id/ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/row_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mac_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mac_label"
            android:textSize="@dimen/row_text_size" />

        <TextView
            android:id="@+id/mac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/row_text_size" />
    </LinearLayout>

</LinearLayout>